fixed bugs on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -479,7 +479,7 @@ ul {
   cursor: pointer;
 }
 
-/* .checkbox-style::after {
+.checkbox-style::after {
   content: '';
   position: absolute;
   display: block;
@@ -487,7 +487,7 @@ ul {
   right: -7px;
   left: -7px;
   bottom: -7px;
-} */
+}
 
 .checkbox:checked + .checkbox-style::before {
   content: '';
